--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: black;
+  color: white;
+}
+
+a {
+  color: inherit !important;
+}
