aqui já estão separados nos cantos

--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,13 @@ body {
 }
 
 a {
-  color: inherit !important;
+  color: inherit;
+}
+
+/* Header */
+.header {
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
