--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: black;
   color: white;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
