--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
   background-color: black;
   color: white;
   font-family: 'Montserrat', sans-serif;
@@ -14,6 +13,7 @@ body {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 /* Header */
@@ -22,4 +22,12 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header__link:hover {
+  text-decoration: underline;
+}
+
+.main {
+
 }
